# ego_planner_standalone

./: README.md
application/: ego_planner_gui.py
docs/: ALGORITHM_EXTRACTION.md  ARCHITECTURE.md  BUILD_FIX.md  FIX_EIGEN_ERROR.sh  GRID_MAP_STANDALONE.md  IO_INTERFACE_README.md  PROJECT_STATUS.md  QUICK_START.md  README.md  STARTUP_GUIDE.sh  TESTING_OBSTACLE_AVOIDANCE.md
docs/1.0/: COMMUNICATION_CHECK.md  CURRENT_STATUS.md  DATA_FLOW_DEBUG.md  FIX_OBSTACLE_AVOIDANCE.md  FIX_SUMMARY.md  PARAMETER_FIXES.md  REFACTOR_NOTES.md  SEGFAULT_FIX.md
docs/scripts/: control_panel.py  start.sh  test_grid_map.sh  test_planner.sh
ego-planner/devel/: .catkin  local_setup.fish
ego-planner/devel/lib/ego_planner/: traj_server
ego-planner/devel/lib/ego_planner_bridge/: ego_planner_bridge_node
ego-planner/devel/lib/grid_map_standalone/: grid_map_node
ego-planner/devel/lib/local_sensing_node/: pcl_render_node
ego-planner/devel/lib/multi_map_server/: multi_map_visualization
ego-planner/devel/lib/odom_visualization/: odom_visualization
ego-planner/devel/lib/pkgconfig/: bspline_opt.pc  cmake_utils.pc  ego_planner.pc  ego_planner_bridge.pc  grid_map_standalone.pc  local_sensing_node.pc  map_generator.pc  mockamap.pc  multi_map_server.pc  odom_visualization.pc  path_searching.pc  plan_env.pc  pose_utils.pc  quadrotor_msgs.pc  rviz_plugins.pc  so3_control.pc  so3_quadrotor_simulator.pc  traj_utils.pc  uav_utils.pc  waypoint_generator.pc
ego-planner/devel/lib/so3_control/: control_example
ego-planner/devel/lib/so3_quadrotor_simulator/: quadrotor_simulator_so3
ego-planner/devel/lib/waypoint_generator/: waypoint_generator
ego-planner/devel/share/bspline_opt/cmake/: bspline_optConfig.cmake
ego-planner/devel/share/cmake_utils/cmake/: cmake_utilsConfig.cmake
ego-planner/devel/share/ego_planner/cmake/: ego_planner-msg-paths.cmake  ego_plannerConfig.cmake
ego-planner/devel/share/ego_planner_bridge/cmake/: ego_planner_bridgeConfig.cmake
ego-planner/devel/share/grid_map_standalone/cmake/: grid_map_standaloneConfig.cmake
ego-planner/devel/share/local_sensing_node/cmake/: local_sensing_nodeConfig.cmake
ego-planner/devel/share/map_generator/cmake/: map_generatorConfig.cmake
ego-planner/devel/share/mockamap/cmake/: mockamapConfig.cmake
ego-planner/devel/share/multi_map_server/cmake/: multi_map_server-msg-paths.cmake  multi_map_serverConfig.cmake
ego-planner/devel/share/odom_visualization/cmake/: odom_visualizationConfig.cmake
ego-planner/devel/share/path_searching/cmake/: path_searchingConfig.cmake
ego-planner/devel/share/plan_env/cmake/: plan_envConfig.cmake
ego-planner/devel/share/pose_utils/cmake/: pose_utilsConfig.cmake
ego-planner/devel/share/quadrotor_msgs/cmake/: quadrotor_msgs-msg-paths.cmake  quadrotor_msgsConfig.cmake
ego-planner/devel/share/roseus/ros/ego_planner/: manifest.l
ego-planner/devel/share/rviz_plugins/cmake/: rviz_pluginsConfig.cmake
ego-planner/devel/share/so3_control/cmake/: so3_controlConfig.cmake
ego-planner/devel/share/so3_quadrotor_simulator/cmake/: so3_quadrotor_simulatorConfig.cmake
ego-planner/devel/share/traj_utils/cmake/: traj_utilsConfig.cmake
ego-planner/devel/share/uav_utils/cmake/: uav_utilsConfig.cmake
ego-planner/devel/share/waypoint_generator/cmake/: waypoint_generatorConfig.cmake
ego-planner/src/grid_map_standalone/: CMakeLists.txt  README.md  package.xml
ego-planner/src/grid_map_standalone/include/: grid_map.h
ego-planner/src/grid_map_standalone/launch/: full_system.launch  grid_map.launch  grid_map_params.xml  test_grid_map.launch
ego-planner/src/grid_map_standalone/src/: grid_map.cpp  grid_map_node.cpp  raycast.cpp
ego-planner/src/planner/plan_manage/launch/: bridge.rviz  default.rviz  run_in_sim.launch
ego-planner/src/ros_bridge/: CMakeLists.txt  package.xml
ego-planner/src/ros_bridge/include/shared_memory/: shm_manager.h
ego-planner/src/ros_bridge/launch/: run_bridge.launch  sim_only.launch  simulator.xml
ego-planner/src/ros_bridge/scripts/: 2025-12-05-13-12-09.bag  test.py  test2.py  test3.py
ego-planner/src/ros_bridge/src/: ros_bridge_node.cpp
planner_standalone/: CMakeLists.txt
planner_standalone/include/bspline_opt/: bspline_optimizer.h  gradient_descent_optimizer.h  uniform_bspline.h
planner_standalone/include/io_interface/: io_interface.h  shm_io_interface.h
planner_standalone/include/path_searching/: dyn_a_star.h
planner_standalone/include/plan_env/: grid_map.h
planner_standalone/include/plan_manage/: plan_container.hpp  planner_manager.h
planner_standalone/include/shared_memory/: shm_common.h
planner_standalone/include/traj_utils/: polynomial_traj.h
planner_standalone/src/: bspline_optimizer.cpp  dyn_a_star.cpp  grid_map.cpp  io_interface.cpp  main.cpp  planner_manager.cpp  polynomial_traj.cpp  shm_io_interface.cpp  uniform_bspline.cpp
(+5 files in other folders)
