<?xml version="1.0"?>
<package format="2">
  <name>grid_map_standalone</name>
  <version>1.0.0</version>
  <description>Standalone grid map node for occupancy mapping and inflation</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>eigen_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
  </export>
</package>
