<?xml version="1.0"?>
<package format="2">
  <name>ego_planner_bridge</name>
  <version>1.0.0</version>
  <description>ROS桥接节点，用于EGO Planner与ROS环境之间的共享内存通信</description>

  <maintainer email="user@todo.todo">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>ego_planner</depend>

  <export>
  </export>
</package>
